Fix extra spacing on body

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -6,6 +6,13 @@
 html, body {
     height:100%;
 }
+body{
+    position:absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+}
 
 main{
     margin-top:60px;
